Correct index.css alignment

--- a/helper_app/static/css/index.css
+++ b/helper_app/static/css/index.css
@@ -11,6 +11,10 @@
   clear: both;
 }
 
+ul {
+  padding-left: 0;
+}
+
 body {
   background-image: url('../images/background.jpg');
   background-size: cover;
